# nettu-scheduler

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  TODOS.md  codecov.yml  run_api_tests.sh
scheduler/: Cargo.toml  Dockerfile  Dockerfile.prod
scheduler/clients/javascript/: .npmignore  jest.config.js  package-lock.json  package.json  run_integration_tests.sh  tsconfig.json  tsconfig.release.json
scheduler/clients/javascript/lib/: accountClient.ts  baseClient.ts  calendarClient.ts  eventClient.ts  healthClient.ts  index.ts  scheduleClient.ts  serviceClient.ts  userClient.ts
scheduler/clients/javascript/lib/domain/: account.ts  calendar.ts  calendarEvent.ts  index.ts  metadata.ts  permissions.ts  schedule.ts  service.ts  user.ts
scheduler/clients/javascript/tests/: account.spec.ts  calendar.spec.ts  calendarEvent.spec.ts  health.spec.ts  schedule.spec.ts  service.spec.ts  user.spec.ts
scheduler/clients/javascript/tests/config/: test_private_rsa_key.pem
scheduler/clients/javascript/tests/helpers/: fixtures.ts  utils.ts
scheduler/clients/rust/: Cargo.toml
scheduler/clients/rust/src/: account.rs  calendar.rs  event.rs  lib.rs  schedule.rs  service.rs  shared.rs  user.rs
scheduler/crates/api/: Cargo.toml
scheduler/crates/api/src/: error.rs  job_schedulers.rs  lib.rs
scheduler/crates/api/src/account/: add_account_integration.rs  create_account.rs  delete_account_webhook.rs  mod.rs  remove_account_integration.rs  set_account_google_integration.rs  (+2 more)
scheduler/crates/api_structs/: Cargo.toml
scheduler/crates/api_structs/src/: lib.rs
scheduler/crates/domain/: Cargo.toml
scheduler/crates/domain/src/: account.rs  booking_slots.rs  calendar.rs  date.rs  event.rs  event_instance.rs  lib.rs  reminder.rs  schedule.rs  service.rs  user.rs
scheduler/crates/infra/: Cargo.toml
scheduler/crates/infra/migrations/: 00000000000000_initial_setup.sql  20210822154522_init_tables.sql  cleanup.sql  dbinit.sql  dummy.sql  tmp.json  tmp.sql
scheduler/crates/infra/src/: config.rs  lib.rs
scheduler/crates/sdk/: Cargo.toml
scheduler/crates/sdk/src/: base.rs  calendar.rs  event.rs  lib.rs  schedule.rs  service.rs  status.rs  user.rs
scheduler/crates/utils/: Cargo.toml
scheduler/integrations/: docker-compose.yml  wait-for.sh
scheduler/src/: main.rs
scheduler/tests/: api.rs  collective_team_scheduling.rs  group_team_scheduling.rs  round_robin_scheduling.rs  team_scheduling.rs
scheduler/tests/helpers/: mod.rs  setup.rs  utils.rs
server/: Cargo.toml  Dockerfile  Dockerfile.dev
server/config/: pubkey.pem
server/crates/api/: Cargo.toml
server/crates/api/src/: clock.rs  error.rs  job_schedulers.rs  lib.rs
server/crates/api_structs/: Cargo.toml
server/crates/api_structs/src/: lib.rs
server/crates/core/: Cargo.toml
server/crates/core/src/: calendar.rs  calendar_view.rs  context.rs  date.rs  event.rs  event_instance.rs  lib.rs  reminder.rs  schedule.rs  service.rs  user.rs
server/crates/domain/: Cargo.toml
server/crates/domain/src/: account.rs  booking_slots.rs  event.rs  event_instance.rs  lib.rs  reminder.rs  schedule.rs  timespan.rs  user.rs
server/crates/infra/: Cargo.toml
server/crates/infra/src/: config.rs  lib.rs  logger.rs
server/crates/sdk/: Cargo.toml
server/crates/sdk/src/: account.rs  base.rs  lib.rs  schedule.rs  status.rs  user.rs
server/crates/utils/src/: lib.rs
server/integrations/: docker-compose.yml  wait-for.sh
server/src/: api.rs  clock.rs  interval_service.rs  lib.rs  main.rs  telemetry.rs
server/src/account/: api.rs  mod.rs
server/src/account/domain/: account.rs  mod.rs
server/src/account/repos/: inmemory.rs  inmemory_account_repo.rs  mod.rs  mongo.rs  mongo_account_repo.rs  repos.rs
server/src/account/usecases/: create_account.rs  delete_account_webhook.rs  get_account.rs  mod.rs  set_account_pub_key.rs  set_account_webhook.rs
server/src/calendar/: api.rs  mod.rs  repo.rs
server/src/calendar/domain/: calendar.rs  calendar_view.rs  date.rs  mod.rs
server/src/calendar/dtos/: mod.rs
server/src/calendar/repos/: inmemory.rs  inmemory_calendar_repo.rs  mod.rs  mongo.rs  mongo_calendar_repo.rs  repos.rs
server/src/calendar/usecases/: create_calendar.rs  delete_calendar.rs  get_calendar.rs  get_calendar_events.rs  get_user_bookingslots.rs  get_user_freebusy.rs  update_calendar_settings.rs
server/src/company/: mod.rs
server/src/company/domain/: company.rs  mod.rs
server/src/company/repos/: inmemory_company_repo.rs  mod.rs  mongo_company_repo.rs  repos.rs
server/src/event/: api.rs  mod.rs  repo.rs
server/src/event/domain/: booking_slots.rs  event.rs  event_instance.rs
server/src/event/repos/: inmemory_event_repo.rs  mod.rs  mongo.rs  mongo_event_repo.rs  repos.rs
server/src/event/usecases/: create_event.rs  create_event_exception.rs  delete_event.rs  get_event.rs  get_event_instances.rs  mod.rs  send_event_reminders.rs  sync_event_reminders.rs  update_event.rs
server/src/schedule/: api.rs
server/src/schedule/domain/: mod.rs  schedule.rs
server/src/schedule/dtos/: mod.rs
server/src/schedule/repos/: inmemory.rs  mod.rs  mongo.rs
server/src/schedule/usecases/: create_schedule.rs  delete_schedule.rs  get_schedule.rs  update_schedule.rs
server/src/service/: api.rs  mod.rs
server/src/service/domain/: mod.rs  service.rs
server/src/service/repos/: inmemory.rs  mod.rs  mongo.rs  mongo_service_repo.rs  repos.rs
server/src/service/usecases/: add_user_to_service.rs  create_service.rs  get_service.rs  get_service_bookingslots.rs  mod.rs  remove_user_from_service.rs  update_service_user.rs
server/src/shared/: auth.rs  entity.rs  inmemory_repo.rs  mod.rs  mongo_repo.rs  usecase.rs  utils.rs
server/src/user/: api.rs  mod.rs
server/src/user/domain/: mod.rs  user.rs
server/src/user/repos/: inmemory_user_repo.rs  mod.rs  mongo_user_repo.rs  repos.rs
server/src/user/usecases/: create_user.rs  delete_user.rs  get_user.rs
server/tests/: api.rs  helpers.rs  start.sh
server/tests/helpers/: mod.rs  sdk.rs  setup.rs
server/tests/integrations/: docker-compose.yml
(+479 files in other folders)
