[package]
name = "nettu_scheduler"
version = "0.1.0"
authors = ["Fredrik Meringdal"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "crates/api",
    "crates/api_structs",
    "crates/domain",
    "crates/infra",
    "crates/sdk",
    "crates/utils",
]

[dependencies]
nettu_scheduler_api = { path = "./crates/api" }
nettu_scheduler_domain = { path = "./crates/domain" }
nettu_scheduler_infra = { path = "./crates/infra" }
actix-web = "3.3.2"
tracing = "0.1.19"
tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.2.4"
tracing-log = "0.1.1"
openssl-probe = "0.1.2"

[dev-dependencies]
nettu_scheduler_sdk = { path = "./crates/sdk" }
chrono = "0.4.19"
