[package]
name = "nettu_scheduler"
version = "5.6.7"
authors = ["Fredrik Meringdal"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "crates/api",
    "crates/api_structs",
    "crates/domain",
    "crates/infra",
    "crates/utils",
    "clients/rust",
]

[dependencies]
nettu_scheduler_api = { path = "./crates/api" }
nettu_scheduler_domain = { path = "./crates/domain" }
nettu_scheduler_infra = { path = "./crates/infra" }
actix-web = "4.0.0-beta.8"
tracing = "0.1.19"
tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.2.4"
tracing-log = "0.1.1"
openssl-probe = "0.1.2"

[dev-dependencies]
nettu_scheduler_sdk = { path = "./clients/rust" }
chrono = "0.4.19"
chrono-tz = "0.5.3"
