[package]
name = "nettu_scheduler"
version = "0.1.0"
authors = ["Fredrik Meringdal <fmeringdal@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/bin/server.rs"


[dependencies]
lazy_static = "1.4.0"
tokio = { version = "1", features = ["sync"] }
serde = { version = "1.0", features = ["derive"] }
futures = "0.3" # todo, only need stream feature for mongodb
actix-web = "3.3.2"
async-trait = "0.1.42"
env_logger = "0.8.2"
rrule="0.3.7"
chrono = "0.4.19"
chrono-tz = "0.5.3"
mongodb = { version = "1.1.1", default-features = false, features = ["async-std-runtime"] }
anyhow = "1.0.0"
jsonwebtoken = "7"
base64 = "0.13.0"
rand = "0.8.0"