[package]
name = "nettu_scheduler"
version = "0.1.0"
authors = ["Fredrik Meringdal <fmeringdal@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "crates/api",
    "crates/core",
    "crates/infra",
    "crates/sdk",
    "crates/utils"
]

[dependencies]
nettu_scheduler_api = { path = "./crates/api" }
nettu_scheduler_core = { path = "./crates/core" }
nettu_scheduler_infra = { path = "./crates/infra" }
actix-web = "3.3.2"
env_logger = "0.8.2"

[dev-dependencies]
nettu_scheduler_sdk = { path = "./crates/sdk" }
