[package]
name = "nettu_scheduler_sdk"
version = "0.4.1"
description = "Nettu scheduler sdk"
license = "MIT"
authors = ["Fredrik Meringdal"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nettu_scheduler_api_structs = { path = "../../crates/api_structs"}
nettu_scheduler_domain = { path = "../../crates/domain"}
reqwest = { version = "0.11.4", features = ["json"] }
serde = "1.0.123"
