[package]
name = "nettu_scheduler_api"
version = "0.1.0"
authors = ["Fredrik Meringdal"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nettu_scheduler_api_structs = { path = "../api_structs" }
nettu_scheduler_domain = { path = "../domain" }
nettu_scheduler_infra = { path = "../infra" }
serde = { version = "1.0", features = ["derive"] }
futures = "0.3" 
actix-web = "3.3.2"
actix-cors = "0.5.4"
async-trait = "0.1.42"
env_logger = "0.8.2"
rrule="0.5.5"
chrono = { version = "0.4.19", features = ["serde"] }
chrono-tz = "0.5.3"
anyhow = "1.0.0"
jsonwebtoken = "7"
thiserror = "1.0"
tracing = "0.1.25"
tracing-actix-web = "0.2.1"
tracing-futures = "0.2.5"

[dev-dependencies]
serial_test = "*"