[package]
name = "nettu_scheduler_api_structs"
version = "0.1.2"
description = "Nettu scheduler api types"
license = "MIT"
authors = ["Fredrik Meringdal"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
nettu_scheduler_domain = { path = "../domain", version = "0.1.2" }