[package]
name = "nettu_scheduler_domain"
version = "0.1.0"
authors = ["Fredrik Meringdal"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nettu_scheduler_utils = { path = "../utils" }
serde = { version = "1.0", features = ["derive"] }
rrule="0.5.3"
chrono = { version = "0.4.19", features = ["serde"] }
chrono-tz = "0.5.3"
anyhow = "1.0.0"
url = "2.2.0"
jsonwebtoken = "7"
mongodb = { version = "1.1.1", default-features = false, features = ["async-std-runtime"] }
thiserror = "1.0"
