[package]
name = "nettu_scheduler_domain"
version = "0.1.3"
description = "Nettu scheduler domain"
license = "MIT"
authors = ["Fredrik Meringdal"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nettu_scheduler_utils = { path = "../utils", version = "0.1.0" }
serde = { version = "1.0", features = ["derive"] }
rrule = "0.5.7"
chrono = { version = "0.4.19", features = ["serde"] }
chrono-tz = { version = "0.5.3", features = ["serde"] }
anyhow = "1.0.0"
url = "2.2.0"
uuid = { version="0.8.2", features = ["v4"]}
jsonwebtoken = "7"
thiserror = "1.0"
