[package]
name = "nettu_scheduler_infra"
version = "0.1.0"
authors = ["Fredrik Meringdal"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nettu_scheduler_utils = { path = "../utils" }
nettu_scheduler_domain = { path = "../domain" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
async-trait = "0.1.42"
chrono = { version = "0.4.19", features = ["serde"] }
chrono-tz = { version = "0.5.3", features = ["serde"] }
anyhow = "1.0.0"
tokio = { version = "0.2", features = ["macros"] }
tracing = "0.1.25"
tracing-futures = "0.2.5"
reqwest = { version = "0.10.10", features = ["json"] }
uuid = { version="0.8.2", features = ["serde"]}
futures = "0.3" 
sqlx={version = "0.4.2", features = ["postgres", "runtime-actix-rustls", "uuid", "json"] }
