[package]
name = "nettu_scheduler_api"
version = "0.1.0"
authors = ["Fredrik Meringdal"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nettu_scheduler_core = { path = "../core" }
nettu_scheduler_infra = { path = "../infra" }
serde = { version = "1.0", features = ["derive"] }
futures = "0.3" 
actix-web = "3.3.2"
async-trait = "0.1.42"
env_logger = "0.8.2"
rrule="0.5.3"
chrono = { version = "0.4.19", features = ["serde"] }
chrono-tz = "0.5.3"
anyhow = "1.0.0"
jsonwebtoken = "7"
base64 = "0.13.0"
thiserror = "1.0"