[package]
name = "nettu_scheduler_api_structs"
version = "0.1.0"
authors = ["Fredrik Meringdal <fredrikmeringdal@Fredriks-MacBook-Pro.local>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
nettu_scheduler_core = { path = "../core" }