[package]
name = "nettu_scheduler_core"
version = "0.1.0"
authors = ["Fredrik Meringdal"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nettu_scheduler_utils = { path = "../utils" }
actix-rt = "*"
serde = { version = "1.0", features = ["derive"] }
rrule="0.3.8"
chrono = { version = "0.4.19", features = ["serde"] }
chrono-tz = "0.5.3"
anyhow = "1.0.0"
base64 = "0.13.0"
url = "2.2.0"
mongodb = { version = "1.1.1", default-features = false, features = ["async-std-runtime"] }
