[package]
name = "nettu_scheduler_sdk"
version = "0.1.0"
authors = ["Fredrik Meringdal <fredrikmeringdal@Fredriks-MacBook-Pro.local>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nettu_scheduler_api = { path = "../api" }
nettu_scheduler_api_structs = { path = "../api_structs" }
actix-web = "3.3.2"
serde = "1.0.123"
