[package]
name = "nettu_scheduler_sdk"
version = "0.1.0"
authors = ["Fredrik Meringdal"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nettu_scheduler_api = { path = "../api" }
nettu_scheduler_api_structs = { path = "../api_structs" }
reqwest = { version = "0.10.10", features = ["json"] }
serde = "1.0.123"
